--- a/form-html/form.html
+++ b/form-html/form.html
@@ -1,11 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>form</title>
 </head>
-<body>
-    
+
+<body bgcolor="lightgreen">
+    <fieldset>
+    <table align="center" cellspacing="5">
+        
+            <legend>form</legend>
+            <caption> STUDENT REGISTATION FORM </caption>
+            <form action="">
+                <tr>
+                    <td>
+                        <label for="">FIRST NAME </label>
+                    </td>
+                    <td>
+                        <input type="text" name="First Name" placeholder="First Name" maxlength="30" minlength="3"
+                            pattern="[A-Z a-z]{3,30}">
+                        (max 30 characters a-z and A-Z)
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <label for="">LAST NAME </label>
+                    </td>
+                    <td>
+                        <input type="text" name="Last Name" placeholder="Last Name" maxlength="30" minlength="3"
+                            pattern="[A-Z a-z]{3,30}">
+                        (max 30 characters a-z and A-Z)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="">DATE OF BIRTH</label>
+                    </td>
+                    <td>
+                        <input type="date">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="">EMAIL</label>
+                    </td>
+                    <td>
+                        <input type="email" name="Email_Id" placeholder="Exampli@email.com" maxlength="100" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="">MOBILE NO.</label>
+                    </td>
+                    <td>
+                        <input type="number" name="Mobile Number" placeholder="0123456789" max="10" pattern="[0-9]{10}" />
+                        (10 digit number)
+                    </td>
+                <tr>
+                    <td><label for="">GENDER</label></td>
+                    <td>
+                        Male <input type="radio" name="Gender" value="Male" />
+                        Female <input type="radio" name="Gender" value="Female" />
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="">ADDRESS</label>
+
+
+                    </td>
+                    <td><textarea name="Address" rows="4" cols="30"></textarea></td>
+                </tr>
+                <tr>
+                    <td><label for="">CITY</label></td>
+                    <td><input type="text" name="City" maxlength="30" />
+                        (max 30 characters a-z and A-Z)
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="">PIN CODE</label></td>
+                    <td><input type="text" name="Pin_Code" maxlength="6" />
+                        (6 digit number)
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="">STATE</label></td>
+                    <td><input type="text" name="State" maxlength="30" />
+                        (max 30 characters a-z and A-Z)
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="">COUNTRY</label></td>
+                    <td><input type="text" name="Country" value="India" /></td>
+                </tr>
+                <tr>
+                    <td><label for="">HOBBIES</label>
+
+
+                    </td>
+
+                    <td>
+                        <label for="">Drawing</label>
+                        <input type="checkbox" name="Hobby_Drawing" value="Drawing" />
+                        <label for="">Singing</label>
+                        <input type="checkbox" name="Hobby_Singing" value="Singing" />
+                        <label for="">Dancing</label>
+                        <input type="checkbox" name="Hobby_Dancing" value="Dancing" />
+                        <label for="">Sketching</label>
+                        <input type="checkbox" name="Hobby_Cooking" value="Cooking" />
+
+
+                        <label for="">Others</label>
+                        <input type="checkbox" name="Hobby_Other" value="Other">
+                        <input type="text" name="Other_Hobby" maxlength="30" />
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="">QUALIFICATION</label>
+                    </td>
+                    <td>
+                        <table>
+                            <tr>
+                                <td align="center"><b>Sl.No.</b></td>
+                                <td align="center"><b>Examination</b></td>
+                                <td align="center"><b>Board</b></td>
+                                <td align="center"><b>Percentage</b></td>
+                                <td align="center"><b>Year of Passing</b></td>
+                            </tr>
+
+                            <tr>
+                                <td><label for="">1</label></td>
+                                <td><label for="">Class X</label></td>
+                                <td><input type="text" name="ClassX_Board" maxlength="30" /></td>
+                                <td><input type="text" name="ClassX_Percentage" maxlength="30" /></td>
+                                <td><input type="text" name="ClassX_YrOfPassing" maxlength="30" /></td>
+                            </tr>
+
+                            <tr>
+                                <td><label for="">2</label></td>
+                                <td><label for="">Class XII</label></td>
+                                <td><input type="text" name="ClassXII_Board" maxlength="30" /></td>
+                                <td><input type="text" name="ClassXII_Percentage" maxlength="30" /></td>
+                                <td><input type="text" name="ClassXII_YrOfPassing" maxlength="30" /></td>
+                            </tr>
+
+                            <tr>
+                                <td><label for="">3</label></td>
+                                <td><label for="">Graduation</label></td>
+                                <td><input type="text" name="Graduation_Board" maxlength="30" /></td>
+                                <td><input type="text" name="Graduation_Percentage" maxlength="30" /></td>
+                                <td><input type="text" name="Graduation_YrOfPassing" maxlength="30" /></td>
+                            </tr>
+
+                            <tr>
+                                <td><label for="">4</label></td>
+                                <td><label for="">Masters</label></td>
+                                <td><input type="text" name="Masters_Board" maxlength="30" /></td>
+                                <td><input type="text" name="Masters_Percentage" maxlength="30" /></td>
+                                <td><input type="text" name="Masters_YrOfPassing" maxlength="30" /></td>
+                            </tr>
+
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td align="center">(10 char max)</td>
+                                <td align="center">(upto 2 decimal)</td>
+                            </tr>
+                        </table>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td><label for="" name="COURSES">COURSES <br> APPLIED FOR</label></td>
+                    <td>
+                        <label for="">BCA</label>
+                        <input type="radio" name="COURSES" value="BCA">
+                        <label for="">B.Com</label>
+                        <input type="radio" name="COURSES" value="B.Com">
+                        <label for="">B.Sc</label>
+                        <input type="radio" name="COURSES" value="B.Sc">
+                        <label for="">B.A</label>
+                        <input type="radio" name="COURSES" value="B.A">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" align="center">
+                        <input type="submit" value="Submit">
+                        <input type="reset" value="Reset">
+                    </td>
+                </tr>
+                </tr>
+            </form>
+        </fieldset>
+    </table>
+
 </body>
+
 </html>
