--- a/css-task/border.html
+++ b/css-task/border.html
@@ -6,37 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <style>
-        body {
-            background: blue;
-            color: black;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Courier New', Courier, monospace;
-        }
-
-        span {
-            text-decoration: underline solid blue;
-        }
-
-        div {
-            background: white;
-            width: 50%;
-            margin-top: 5%;
-            border-radius: 20px;
-        }
-
-        button {
-            height: 36px;
-            width: 100px;
-            background-color: blue;
-            color: white;
-            border-radius: 10px;
-        }
+       
     </style>
 </head>
 
