--- a/web-demo/index.html
+++ b/web-demo/index.html
@@ -21,7 +21,8 @@
         }
 
         .header {
-            height: 10vh;
+
+            height: 10%;
             width: 100%;
             /* background-color: rgba(250, 250, 250, 0.15); */
             display: flex;
@@ -35,7 +36,7 @@
 
 
         .logo {
-            height: 20vh;
+            height: 88px;
             width: 25%;
             background-color: rgba(250, 250, 250, 0.15);
             font-size: 30px;
@@ -50,7 +51,7 @@
         }
 
         .links {
-            height: 20vh;
+            height: 88px;
             width: 75%;
             background-color: rgba(250, 250, 250, 0.15);
             list-style: none;
@@ -81,9 +82,9 @@
         }
 
         video {
-            min-width: 100%;
+            width: 100%;
             min-height: 100vh;
-            max-width: 100%;
+            /* max-width: 100%; */
             max-height: 100vh;
             object-fit: cover;
             z-index: -1;
@@ -91,6 +92,10 @@
 
 
         .video-layout {
+            /* min-width: 100%; */
+            min-height: 100vh;
+            /* max-width: 100%; */
+            max-height: 100vh;
             position: absolute;
             background-color: rgba(31, 39, 43, 0.75);
             top: 0;
@@ -101,12 +106,16 @@
         }
 
         .video-content {
+            /* display: flex; */
             height: 50%;
-            width: 150%;
+            width: 100%;
             position: absolute;
-            top: 40%;
+            top: 20%;
             left: 6%;
             color: white;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
         }
 
         #btn-join {
@@ -119,18 +128,39 @@
             margin-top: 30px;
         }
 
-        .card-head {
+        /* .card-head {
             width: 100%;
+        } */
+        .card-head {
+            /* background-color: red; */
+            height: 299px;
+            width: 100%;
+            position: relative;
+            top: -147px;
+            /* left: 1%; */
+            display: flex;
+            flex-wrap: nowrap;
+            align-content: space-between;
+            justify-content: space-evenly;
         }
 
+        /* #red-cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+
+        } */
+
         .cards {
+
             height: 250px;
             width: 400px;
             background-color: #a12c2f;
             color: white;
             border-radius: 20px;
             position: relative;
-            margin: 2%;
+            top: 26px;
+            /* margin: 2%; */
         }
 
         .card-icon1 {
@@ -148,28 +178,17 @@
 
         }
 
-        .card-head {
-            height: 46%;
-            width: 100%;
-            position: absolute;
-            top: 82%;
-            left: 1%;
-            display: flex;
-            flex-wrap: wrap;
 
-        }
+
+
 
         .main {
-            height: 250px;
-            width: 100%;
-            display: flex;
+            margin-top: -126px;
 
         }
 
         .m1 {
-            position: relative;
-            top: 60%;
-            left: 40%;
+            text-align: center;
             font-size: 28px;
             font-weight: 700;
             color: white;
@@ -182,7 +201,7 @@
         }
 
         .Meeting_Catgories {
-            height: 450px;
+            height: fit-content;
             width: 350px;
             background-color: white;
             border-radius: 25px;
@@ -240,7 +259,8 @@
         }
 
         #a {
-            height: 28px;
+            text-align: center;
+            height: max-content;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -338,7 +358,7 @@
             left: 10px;
         }
 
-       
+
         a {
             text-decoration: none;
         }
@@ -351,7 +371,7 @@
         }
 
         .bachelor_card {
-            height: 200px;
+            /* height: 200px; */
             width: 50%;
             background-color: rgba(250, 250, 250, 0.15);
             margin-bottom: 20px;
@@ -359,10 +379,10 @@
         }
 
         .news {
-            height: 420px;
+            /* height: 420px; */
             width: 46%;
-            background-color: white;
-            color: black;
+            /* background-color: white; */
+            /* color: black; */
             border-radius: 25px;
             position: absolute;
             left: 52%;
@@ -465,7 +485,7 @@
 
         .contactus_main {
             margin: 6%;
-            height: 500px;
+            /* height: 500px; */
             width: 60%;
             background-color: white;
             background-color: #eee;
@@ -477,7 +497,7 @@
             padding: 20px;
             margin: 20px;
             height: 20px;
-            width: 26%;
+            /* width: 26%; */
             border-radius: 25px;
             border-color: #eee;
             box-sizing: 1px;
@@ -532,6 +552,8 @@
 
         .x1 {
             display: flex;
+            justify-content: center;
+            flex-wrap: nowrap;
         }
 
         .info_ul li {
@@ -542,6 +564,7 @@
             margin-bottom: 30px;
             padding-bottom: 30px;
         }
+
         .footer {
             text-align: center;
             border-top: 1px solid rgba(250, 250, 250, 0.15);
@@ -558,6 +581,9 @@
             color: #f5a425;
         }
 
+        .main1 {
+            border-top: 1px solid #eee;
+        }
     </style>
 </head>
 
@@ -572,6 +598,7 @@
         <!-- logo End -->
         <!-- LINK start -->
         <div class="links">
+            
             <a href="#">Home</a>
             <a href="#">Meeting</a>
             <a href="#">Apply Now</a>
@@ -603,6 +630,7 @@
     </div>
 
     <div class="card-head">
+        <!-- <div id="red-cards"> -->
         <div class="cards">
 
             <div class="card-icon1">
@@ -653,14 +681,15 @@
 
         </div>
         <!-- card3 end -->
-
+        <!-- </div> -->
     </div>
     <!-- main start -->
     <div class="main">
 
         <div class="m1">UPCOMING METTING </div>
     </div>
-    <hr>
+
+    -->
     <div class="main1">
         <!-- metting_container  Start-->
 
@@ -705,6 +734,7 @@
                 </div>
                 <div class="card">
                     <div class="m_img2">
+
                         <div class="price"><b> &dollar; 36.00 </b></div>
                     </div>
                     <div class="img_contain">
@@ -769,7 +799,11 @@
                 </div>
             </div>
         </div>
-        <div class="news">hello</div>
+        <!-- <div class="news" style="background-image: conic-gradient( 0deg 90deg,blue 90deg 180deg,green 180deg 270deg,yellow 270deg 360deg);">hello</div> -->
+        <div class="news" style="background-image: conic-gradient(red,blue,green,yellow,#1f272b,#3CF);">
+            <img src="C:\Users\Home\Desktop\experienced-web-developer-doing-backend-development.jpg" alt="" height="400"
+                width="560" style="mix-blend-mode: darken; background-size: cover; opacity: 0.5;">
+        </div>
     </div>
 
     <div class="COURSES_main">
@@ -899,5 +933,6 @@
         </p>
     </div>
 </body>
+
 
 </html>
